--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 logging.level.*=debug
-spring.datasource.url=jdbc:mysql://localhost:3306/so_cobranca?verifyServerCertificate=false&useSSL=false&requireSSL=false
-spring.datasource.username=user1
-spring.datasource.password=12345
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-security.enable-csrf=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/so_cobranca?verifyServerCertificate=false&useSSL=false&requireSSL=false
+#spring.datasource.username=user1
+#spring.datasource.password=12345
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#security.enable-csrf=false
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=cobrancaTitulo
+spring.datasource.driverClassName=com.mongodb.Mongo
+spring.data.mongodb.repositories.enabled=true
