--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,10 @@ logging.level.*=debug
 #spring.jpa.hibernate.ddl-auto=update
 #security.enable-csrf=false
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=cobrancaTitulo
+spring.data.mongodb.host=ds249325.mlab.com
+spring.data.mongodb.port=49325
+spring.data.mongodb.database=heroku_k5hl3wk7
+spring.data.mongodb.username=darkenside
+spring.data.mongodb.password=ecila2004
 spring.datasource.driverClassName=com.mongodb.Mongo
 spring.data.mongodb.repositories.enabled=true
