--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.data.mongodb.host=ds249325.mlab.com
 spring.data.mongodb.port=49325
 spring.data.mongodb.database=heroku_k5hl3wk7
 spring.data.mongodb.username=darkenside
-spring.data.mongodb.password=ecila2004
+spring.data.mongodb.password=
 spring.datasource.driverClassName=com.mongodb.Mongo
 spring.data.mongodb.repositories.enabled=true
