--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,12 @@ spring.data.mongodb.password=ecila2004
 spring.datasource.driverClassName=com.mongodb.Mongo
 spring.data.mongodb.repositories.enabled=true
 server.port=${PORT:5000}
+
+spring.thymeleaf.enabled=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.cache=false
